--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "weather-app",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://AL-Williams001.github.io/weather-app",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "gh-pages": "^6.1.1",
     "vite": "^5.1.0"
   }
 }
